spring boot / cloud upgrade

--- a/ci-droid-tasks-consumer-services/pom.xml
+++ b/ci-droid-tasks-consumer-services/pom.xml
@@ -46,11 +46,13 @@
         <dependency>
             <groupId>com.jayway.awaitility</groupId>
             <artifactId>awaitility</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>com.oneeyedmen</groupId>
             <artifactId>fakir</artifactId>
+            <scope>test</scope>
          </dependency>
 
         <dependency>
