--- a/pom.xml
+++ b/pom.xml
@@ -68,12 +68,9 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
 
-        <lombok.version>1.18.4</lombok.version>
-        <mockito.version>3.0.0</mockito.version>
-        <assertj.version>3.9.1</assertj.version>
-        <commons-io.version>2.7</commons-io.version>
+        <commons-io.version>2.6</commons-io.version>
         <ant-style-path-matcher.version>1.0.0</ant-style-path-matcher.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <logstash-logback-encoder.version>4.11</logstash-logback-encoder.version>
@@ -116,7 +113,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.6.2</version>
     </parent>
 
     <modules>
@@ -244,7 +241,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
@@ -258,16 +254,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>junit-vintage-engine</artifactId>
-                    <groupId>org.junit.vintage</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
     </dependencies>
