--- a/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
+++ b/ci-droid-tasks-consumer-infrastructure/src/test/resources/application-test.yml
@@ -10,6 +10,13 @@ spring:
     port: 3025
     sender: ci-droid.test@myDomain.com
 
+logging.pattern.console: "%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n"
+logging.level:
+  org:
+    springframework: INFO
+
+
+
 notifiers:
   http.targetUrl: "http://localhost:9901/notify"
   github.prComment.enable: true
@@ -30,3 +37,6 @@ cidroid-behavior:
     enabled: true
     maxFiles: 5
     warningMessage: "Oops! The your PR has more than {0} files. It's going to be tough for the reviewer :( . Limit the number of files in your PR."
+
+
+
