java 11 + Spring Boot 2.6.2 + misc libs upgrade (#83)
* java 11 upgrade

* spring boot / cloud upgrade

* upgrading some libs versions

* removing Fakir lib

--- a/ci-droid-tasks-consumer-services/pom.xml
+++ b/ci-droid-tasks-consumer-services/pom.xml
@@ -44,14 +44,10 @@
         </dependency>
 
         <dependency>
-            <groupId>com.jayway.awaitility</groupId>
+            <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
+            <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>com.oneeyedmen</groupId>
-            <artifactId>fakir</artifactId>
-         </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
