--- a/pom.xml
+++ b/pom.xml
@@ -64,27 +64,23 @@
         <!-- Compiling -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
-        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
 
-        <lombok.version>1.18.4</lombok.version>
-        <mockito.version>3.0.0</mockito.version>
-        <assertj.version>3.9.1</assertj.version>
-        <commons-io.version>2.7</commons-io.version>
+        <commons-io.version>2.11.0</commons-io.version>
         <ant-style-path-matcher.version>1.0.0</ant-style-path-matcher.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <logstash-logback-encoder.version>4.11</logstash-logback-encoder.version>
         <janino.version>3.0.6</janino.version>
         <jgit.version>5.2.0.201812061821-r</jgit.version>
-        <commons-lang3.version>3.7</commons-lang3.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
 
         <mockserver.version>5.5.1</mockserver.version>
-        <awaitility.version>1.7.0</awaitility.version>
-        <greenmail.version>1.5.9</greenmail.version>
-        <fakir.version>1.0.10</fakir.version>
+        <awaitility.version>4.1.1</awaitility.version>
+        <greenmail.version>1.6.5</greenmail.version>
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <jacoco.version>0.8.2</jacoco.version>
@@ -116,7 +112,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.6.2</version>
     </parent>
 
     <modules>
@@ -158,7 +154,7 @@
             <!-- Test -->
 
             <dependency>
-                <groupId>com.jayway.awaitility</groupId>
+                <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
                 <version>${awaitility.version}</version>
                 <scope>test</scope>
@@ -175,13 +171,6 @@
                         <artifactId>junit</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-
-            <dependency>
-                <groupId>com.oneeyedmen</groupId>
-                <artifactId>fakir</artifactId>
-                <version>${fakir.version}</version>
-                <scope>test</scope>
             </dependency>
 
             <dependency>
@@ -244,7 +233,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
@@ -258,16 +246,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>junit-vintage-engine</artifactId>
-                    <groupId>org.junit.vintage</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
     </dependencies>
@@ -289,8 +267,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
 
