--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
 
         <jacoco.version>0.8.2</jacoco.version>
         <guava.version>27.0-jre</guava.version>
+        <springfox.version>3.0.0</springfox.version>
+
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.9</ci-droid-extensions.version>
