--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,9 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
 
         <jacoco.version>0.8.2</jacoco.version>
-        <guava.version>27.0-jre</guava.version>
+        <guava.version>31.0.1-jre</guava.version>
+        <springfox.version>3.0.0</springfox.version>
+
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
         <ci-droid-extensions.version>1.0.9</ci-droid-extensions.version>
