application now starts with development profile

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
@@ -2,13 +2,12 @@
 
 spring:
   rabbitmq:
-      addresses: yourRabbitMqServer
-      username: guest
-      password: guest
-      virtual-host: dev
+    ssl.enabled: false
 
-gitHub:
-  api.url: "http://api.github.com"
+
+source-control:
+  type: "GITHUB"
+  url: "http://api.github.com"
   login: "yourLogin"
   password: "yourPassword"
   oauthToken: "token"
