not using profiles anymore to load source control specific config (#86)
latest Spring Boot versions have reworked the way multi-profiles work.. to avoid the issue, we are now using a property instead of a profile

Co-authored-by: Vincent Fuchs <vincent.fuchs@gefa.de>

--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application-development.yml
@@ -2,13 +2,13 @@
 
 spring:
   rabbitmq:
-      addresses: yourRabbitMqServer
-      username: guest
-      password: guest
-      virtual-host: dev
+    ssl.enabled: false
 
-gitHub:
-  api.url: "http://api.github.com"
+spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+
+source-control:
+  type: "GITLAB"
+  url: "http://api.github.com"
   login: "yourLogin"
   password: "yourPassword"
   oauthToken: "token"
