--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -58,10 +58,10 @@ feign.hystrix.enabled: false
 source-control:
   type: "GITHUB"
   url: "https://api.github.com"
-  oauthToken: ${SERVICE_ACCOUNT_GITHUB_OAUTH_TOKEN}
+  apiToken: ${SERVICE_ACCOUNT_API_TOKEN}
 #below credentials should be a service account credentials - they will be used to rebase PRs automatically using Git commands.
-  login: ${SERVICE_ACCOUNT_USERNAME}
-  password: ${SERVICE_ACCOUNT_PASSWORD}
+  login: ${SERVICE_ACCOUNT_GIT_USERNAME}
+  password: ${SERVICE_ACCOUNT_GIT_PASSWORD}
 
 
 notifiers:
