--- a/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/main/resources/application.yml
@@ -60,8 +60,8 @@ source-control:
   url: "https://api.github.com"
   apiToken: ${SERVICE_ACCOUNT_API_TOKEN}
 #below credentials should be a service account credentials - they will be used to rebase PRs automatically using Git commands.
-  login: ${SERVICE_ACCOUNT_GIT_USERNAME}
-  password: ${SERVICE_ACCOUNT_GIT_PASSWORD}
+  login: ${SERVICE_ACCOUNT_GIT_USERNAME:"TBD"}
+  password: ${SERVICE_ACCOUNT_GIT_PASSWORD:"TBD"}
 
 
 notifiers:
