--- a/ci-droid-tasks-consumer-infrastructure/pom.xml
+++ b/ci-droid-tasks-consumer-infrastructure/pom.xml
@@ -32,9 +32,10 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.hkarthik7</groupId>
-            <artifactId>azd</artifactId>
-            <version>3.0.1</version>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <version>2.32.0</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
