--- a/pom.xml
+++ b/pom.xml
@@ -114,12 +114,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.2</version>
+        <version>2.6.6</version>
     </parent>
 
     <modules>
         <module>ci-droid-tasks-consumer-services</module>
         <module>ci-droid-tasks-consumer-infrastructure</module>
+        <module>ci-droid-tasks-consumer-gitlab-adapter</module>
         <module>ci-droid-tasks-consumer-autoconfigure</module>
         <module>ci-droid-tasks-consumer-starter</module>
     </modules>
