--- a/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
+++ b/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
@@ -19,10 +19,14 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
 
         <dependency>
@@ -30,6 +34,8 @@
             <artifactId>gitlab4j-api</artifactId>
             <version>4.19.0</version>
         </dependency>
+
+
 
     </dependencies>
 </project>
