--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
         <module>ci-droid-tasks-consumer-services</module>
         <module>ci-droid-tasks-consumer-infrastructure</module>
         <module>ci-droid-tasks-consumer-gitlab-adapter</module>
+        <module>ci-droid-tasks-consumer-azure-devops-adapter</module>
         <module>ci-droid-tasks-consumer-autoconfigure</module>
         <module>ci-droid-tasks-consumer-starter</module>
     </modules>
