--- a/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
+++ b/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
@@ -35,6 +35,11 @@
             <version>4.19.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.version}</version>
+        </dependency>
 
 
     </dependencies>
