--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 
         <jacoco.version>0.8.2</jacoco.version>
         <guava.version>31.0.1-jre</guava.version>
-        <springfox.version>3.0.0</springfox.version>
+        <springdoc.version>1.6.6</springdoc.version>
 
 
         <ci-droid-api.version>1.0.6</ci-droid-api.version>
