--- a/ci-droid-tasks-consumer-starter/pom.xml
+++ b/ci-droid-tasks-consumer-starter/pom.xml
@@ -21,12 +21,12 @@
 
         <!--
         see https://stackoverflow.com/questions/55175790/maven-getting-different-versions-when-using-jar-as-a-dependency-confusing
-        for why we need to define the version here
+        we may need to define the bom version here... not fully clear
         -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson-bom.version}</version>
+<!--            <version>${jackson-bom.version}</version>-->
         </dependency>
 
         <dependency>
