--- a/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
+++ b/ci-droid-tasks-consumer-gitlab-adapter/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
         <artifactId>ci-droid-tasks-consumer-parent</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>ci-droid-tasks-consumer-gitlab-adapter</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <description>ci-droid-tasks-consumer GitLab adapter</description>
 
     <dependencies>
