bitbucket support - used same config like github. to validate with bitbucket committing code Todo 1. test prototype with bitbucket api after updating feign client. 2. clean / reuse code after validating bitbucket API. 3. add unit and integration test

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
         <module>ci-droid-tasks-consumer-github-adapter</module>
         <module>ci-droid-tasks-consumer-autoconfigure</module>
         <module>ci-droid-tasks-consumer-starter</module>
+        <module>ci-droid-tasks-consumer-bitbucket-adapter</module>
     </modules>
 
     <dependencyManagement>
