--- a/ci-droid-tasks-consumer-autoconfigure/pom.xml
+++ b/ci-droid-tasks-consumer-autoconfigure/pom.xml
@@ -45,6 +45,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
+            <artifactId>ci-droid-tasks-consumer-bitbucket-adapter</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.societegenerale.ci-droid.tasks-consumer</groupId>
