--- a/ci-droid-tasks-consumer-bitbucket-adapter/pom.xml
+++ b/ci-droid-tasks-consumer-bitbucket-adapter/pom.xml
@@ -48,6 +48,16 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
