--- a/ci-droid-tasks-consumer-autoconfigure/src/test/resources/application-github-synchronous-test.yml
+++ b/ci-droid-tasks-consumer-autoconfigure/src/test/resources/application-github-synchronous-test.yml
@@ -1,9 +1,8 @@
 source-control:
-  type: "BITBUCKET"
-  url: "http://localhost:9800/api/projects/public-project"
-  login: "sekhar"
+  type: "GITHUB"
+  url: "http://localhost:9900/api/v3"
+  login: "someLogin"
   password: "somePassword"
-  project-key: "public-project"
 
 synchronous-mode: true
 
